[package]
name = "rust-wasm-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
getrandom = {version = "0.2", features = ["js"]}
stylist = {version = "0.12.0", features = ["yew"]}
gloo = "0.8.0"
wasm-bindgen = "0.2.84"
web-sys = {version = "0.3.61", features = ["HtmlButtonElement"]}
